Twenty Twelve: fix long word overflow in IE9 and FF15 by using `word-wrap` instead of `word-break`, fixes #21503.
git-svn-id: http://core.svn.wordpress.org/trunk@21720 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwelve/style.css
+++ b/wp-content/themes/twentytwelve/style.css
@@ -550,15 +550,13 @@ section[role="banner"] {
 
 /* Sidebar */
 .widget-area .widget {
-	overflow: hidden;
-	-moz-hyphens: auto;
-	-ms-word-break: break-all;
+	word-wrap: break-word;
 	-webkit-hyphens: auto;
+	-moz-hyphens: auto;
 	hyphens: auto;
-	word-break: break-all;
-	word-break: break-word;
 	margin-bottom: 48px;
 	margin-bottom: 3.428571429rem;
+	overflow: hidden;
 }
 .widget-area .widget h3 {
 	margin-bottom: 24px;
